fix gradebook active assignment header color contrast
fixes: CNVS-37068

Test Plan:
1. Navigate to Gradezilla
2. Hover over a column and observe header background color
   changes.
  - Observe that link text and header bg color meet contrast
    requirements (3:1 contrast)
3. Go to user profile and turn on High Contrast setting
4. Repeat 1-2, but the contrast must meet 4.5:1 ratio or better
5. Repeat 1-4 with Old Gradebook

Note: selenium specs for "High Contrast" mode are skipped.
They are failing because there is no brandable css variables
js file available in the selenium test environment.

Reviewed-on: https://gerrit.instructure.com/113298
Tested-by: Jenkins
QA-Review: Anju Reddy <areddy@instructure.com>
Product-Review: Nathan Rogowski <nathan@instructure.com>

--- a/app/stylesheets/pages/gradebook/_gradebook.scss
+++ b/app/stylesheets/pages/gradebook/_gradebook.scss
@@ -119,7 +119,7 @@ $cell_height: 33px;
 }
 
 .slick-header-column {
-  background-color: #f3f4f8;
+  background-color: $ic-bg-light-neutral;
   background-image: none;
   padding: 10px;
   @include fontSize(12px);
@@ -132,8 +132,7 @@ $cell_height: 33px;
   &.hovered-column,
   &.slick-header-column-active,
   &.ui-state-hover {
-    @if $use_high_contrast { @include vertical-gradient(#eef5fc, #d5e2ed); }
-    @else { @include vertical-gradient(#e0ecf9, #bdd2e3); }
+    background-color: $ic-bg-light-primary;
   }
   .slick-column-name {
     font-weight: bold;
