--- a/app/stylesheets/pages/gradezilla/_gradebook.scss
+++ b/app/stylesheets/pages/gradezilla/_gradebook.scss
@@ -129,7 +129,7 @@ $header_height: 38px;
 }
 
 .slick-header-column {
-  background-color: #f3f4f8;
+  background-color: $ic-bg-light-neutral;
   background-image: none;
   padding: 10px;
   @include fontSize(12px);
@@ -142,8 +142,7 @@ $header_height: 38px;
   &.hovered-column,
   &.slick-header-column-active,
   &.ui-state-hover {
-    @if $use_high_contrast { @include vertical-gradient(#eef5fc, #d5e2ed); }
-    @else { @include vertical-gradient(#e0ecf9, #bdd2e3); }
+    background-color: $ic-bg-light-primary;
   }
   .slick-column-name {
     font-weight: bold;
